mType/tests/testFiles/error/error/runtimeNullPointerDereference.mt
class TestClass {
    int value;
}
TestClass obj = null;
int x = obj.value;